--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,8 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: 'The Threshold Covenant
 
   or, The Beginning of Religious Rites'
